--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-4">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
                             <img src="/img/why-attend/learn-build.png" alt="Learn & Build">
@@ -261,7 +261,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-4">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
                             <img src="/img/why-attend/talks.png" alt="Workshops & Talks">
@@ -274,7 +274,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-4">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
                             <img src="/img/why-attend/networking.png" alt="Networking">
@@ -287,7 +287,7 @@
                     </div>
                 </div>
 
-                <div class="col-6 col-md-3 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-4">
                     <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="single-blog-thumb">
                             <img src="/img/why-attend/prizes.png" alt="Swags & Prizes">
@@ -299,6 +299,20 @@
 
                     </div>
                 </div>
+
+                <div class="col-6 col-md-4 col-lg-4">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="/img/why-attend/travel.png" alt="Travel Allowance">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Travel Allowance</h4>
+
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
 
             <section style="padding-top: 0%;" class="what-we-offer-area section-padding-100-70" id="tracks">
