--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
                         <a data-toggle="collapse" href="#faq7" class="collapsed">Will travel reimbursements be provided?<i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
                             <p>
-                                Reimbursements cannot be guaranteed. However, stay tuned on our social media channels for any updates regarding the same.
+                                Yes! There'll be a cap on the amount of the reimbursement that'll be provided. Reimbursements will be provided upto this costs only.
                             </p>
                         </div>
                     </li> 
