--- a/index.html
+++ b/index.html
@@ -1312,6 +1312,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6">
                         <div class="footer-menu">
                             <ul class="nav">
+                                <li><a target="_blank" rel="noopener noreferrer" href="/docs/HackVerse Terms&Conditions.pdf"><i class="zmdi zmdi-circle"></i>Terms & Conditions</a></li>
                                 <li><a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/code-of-conduct"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
                                 <!-- <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li> -->
                             </ul>
