--- a/index.html
+++ b/index.html
@@ -313,6 +313,19 @@
                     </div>
                 </div>
 
+                <div class="col-6 col-md-4 col-lg-4">
+                    <div class="single-blog-area wow fadeInUp" data-wow-delay="300ms">
+                        <div class="single-blog-thumb">
+                            <img src="/img/why-attend/beach.png" alt="NITK Beach">
+                        </div>
+                        <div class="single-blog-text text-center">
+                            <h4>Beach</h4>
+
+                        </div>
+
+                    </div>
+                </div>
+
             </div>
 
             <section style="padding-top: 0%;" class="what-we-offer-area section-padding-100-70" id="tracks">
