--- a/team/index.html
+++ b/team/index.html
@@ -202,52 +202,10 @@
         <div id="students" class="container">
                 <h1 class="page-title" style="text-align: center;padding: 10%;">Students</h1>
                 <div class="row">
-                    <!-- Single Speaker Area -->
-                    <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                            <!-- Thumb -->
-                            <div class="speaker-single-thumb">
-                                <img src="/img/bg-img/4.jpg" alt="">
-                            </div>
-                            <!-- Social Info -->
-                            <div class="social-info">
-                                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                            </div>
-                            <!-- Info -->
-                            <div class="speaker-info">
-                                <h5>Albert Barnes</h5>
-                                <p>Founder</p>
-                            </div>
-                        </div>
-                    </div>
     
-                    <!-- Single Speaker Area -->
-                    <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                            <!-- Thumb -->
-                            <div class="speaker-single-thumb">
-                                <img src="/img/bg-img/5.jpg" alt="">
-                            </div>
-                            <!-- Social Info -->
-                            <div class="social-info">
-                                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                                <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                            </div>
-                            <!-- Info -->
-                            <div class="speaker-info">
-                                <h5>Patricia Stanley</h5>
-                                <p>Product Lead</p>
-                            </div>
-                        </div>
-                    </div>
-    
-                    <!-- Single Speaker Area -->
-                    <div class="col-12 col-sm-6 col-lg-4">
+                    <!-- Single Speaker Area -->                   
+
+                    <div class="col-12 col-sm-6 col-lg-3">
                         <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                             <!-- Thumb -->
                             <div class="speaker-single-thumb">
@@ -255,15 +213,13 @@
                             </div>
                             <!-- Social Info -->
                             <div class="social-info">
-                                <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                                <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                                <a href="#"><i class="zmdi zmdi-twitter"></i></a>
+                                <a href="#"><i class="zmdi zmdi-email"></i></a>                                
                                 <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
                             </div>
                             <!-- Info -->
                             <div class="speaker-info">
-                                <h5>Evelyn Stone</h5>
-                                <p>Photographer</p>
+                                <h5>Patricia Stanley</h5>
+                                <!-- <p>Photographer</p> -->
                             </div>
                         </div>
                     </div>
