--- a/index.html
+++ b/index.html
@@ -408,6 +408,73 @@
                 </div>
             </section> 
 
+            <!-- Prizes section -->
+            <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax" style="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-12">
+                            <div class="about-content-text mb-80">
+                                <h3 class="text-center wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">Prizes</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4">
+                            <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">1st Prize</h6>
+                                <div class="ticket-icon">
+                                    <img src="img/core-img/p1.png" alt="">
+                                </div>
+                                <h2 class="ticket-price"><span>₹</span>75,000</h2>
+        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                                <div class="ticket-pricing-table-details">
+                                    <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                                    <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                                    <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                                    <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                                    <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-4">
+                            <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">2nd Prize</h6>
+                                <div class="ticket-icon">
+                                    <img src="img/core-img/p1.png" alt="">
+                                </div>
+                                <h2 class="ticket-price"><span>₹</span>60,000</h2>
+        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                                <div class="ticket-pricing-table-details">
+                                    <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                                    <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                                    <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                                    <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                                    <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                                </div> -->
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-4">
+                            <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">3rd Prize</h6>
+                                <div class="ticket-icon">
+                                    <img src="img/core-img/p1.png" alt="">
+                                </div>
+                                <h2 class="ticket-price"><span>₹</span>40,000</h2>
+        <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
+                                <div class="ticket-pricing-table-details">
+                                    <p><i class="zmdi zmdi-check"></i> One Day Conference Ticket</p>
+                                    <p><i class="zmdi zmdi-check"></i> Coffee-break</p>
+                                    <p><i class="zmdi zmdi-check"></i> Lunch and Networking</p>
+                                    <p><i class="zmdi zmdi-check"></i> Keynote talk</p>
+                                    <p><i class="zmdi zmdi-check"></i> Talk to the Editors Session</p>
+                                </div> -->
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+            
             <div class="row align-items-center">
                     <!-- About Content -->
                     <div class="col-12 col-md-6 order-2 order-lg-1">
