--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <div class="row">
                         <div class="col-12 col-lg-4">
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">1st Prize</h6>
+                                <h6 class="ticket-plan" style="background-color: #FFD700 !important">1st Prize</h6>
                                 <div class="ticket-icon">
                                     <img src="img/core-img/p1.png" alt="">
                                 </div>
@@ -438,7 +438,7 @@
                         </div>
                         <div class="col-12 col-lg-4">
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">2nd Prize</h6>
+                                <h6 class="ticket-plan" style="background-color: #C0C0C0 !important">2nd Prize</h6>
                                 <div class="ticket-icon">
                                     <img src="img/core-img/p1.png" alt="">
                                 </div>
@@ -455,7 +455,7 @@
                         </div>
                         <div class="col-12 col-lg-4">
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                                <h6 class="ticket-plan" style="background-color: #55c1aa !important">3rd Prize</h6>
+                                <h6 class="ticket-plan" style="background-color: #CD7F32 !important">3rd Prize</h6>
                                 <div class="ticket-icon">
                                     <img src="img/core-img/p1.png" alt="">
                                 </div>
