--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                                 <h6 class="ticket-plan" style="background-color: #FFD700 !important">1st Prize</h6>
                                 <div class="ticket-icon">
-                                    <img src="img/core-img/p1.png" alt="">
+                                    <img src="img/core-img/Gold_Cup.png" alt="">
                                 </div>
                                 <h2 class="ticket-price"><span>₹</span>75,000</h2>
         <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -440,7 +440,7 @@
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                                 <h6 class="ticket-plan" style="background-color: #C0C0C0 !important">2nd Prize</h6>
                                 <div class="ticket-icon">
-                                    <img src="img/core-img/p1.png" alt="">
+                                    <img src="img/core-img/Silver_Cup.png" alt="">
                                 </div>
                                 <h2 class="ticket-price"><span>₹</span>60,000</h2>
         <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
@@ -457,7 +457,7 @@
                             <div class="single-ticket-pricing-table text-center mb-100 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                                 <h6 class="ticket-plan" style="background-color: #CD7F32 !important">3rd Prize</h6>
                                 <div class="ticket-icon">
-                                    <img src="img/core-img/p1.png" alt="">
+                                    <img src="img/core-img/Bronze_Cup.png" alt="">
                                 </div>
                                 <h2 class="ticket-price"><span>₹</span>40,000</h2>
         <!--                         <a href="#" class="btn confer-btn w-100 mb-30">Get Tickets <i class="zmdi zmdi-long-arrow-right"></i></a>
