--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/102.jpg" alt="">
+                                                    <img src="img/bg-img/102.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>Breakfast & Check-In</h6>
@@ -788,7 +788,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/103.jpg" alt="">
+                                                    <img src="img/bg-img/103.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>Inauguration</h6>
@@ -893,7 +893,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/104.jpg" alt="">
+                                                    <img src="img/bg-img/104.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>High Tea</h6>
@@ -908,7 +908,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/102.jpg" alt="">
+                                                    <img src="img/bg-img/102.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>Dinner</h6>
@@ -946,7 +946,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/102.jpg" alt="">
+                                                    <img src="img/bg-img/102.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>Breakfast</h6>
@@ -1006,7 +1006,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/104.jpg" alt="">
+                                                    <img src="img/bg-img/104.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>High Tea</h6>
@@ -1021,7 +1021,7 @@
                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
-                                                    <img src="img/bg-img/102.jpg" alt="">
+                                                    <img src="img/bg-img/102.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
                                                     <h6>Dinner</h6>
