updated shreyas photo

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         
                     <div class="row">
         
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/blockchain.png" alt="Blockchain">
@@ -348,7 +348,7 @@
                                 <h5>Blockchain</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/ai.png" alt="AI - ML">
@@ -356,7 +356,7 @@
                                 <h5>AI - ML</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/algorithm.png" alt="Algorithms">
@@ -364,7 +364,7 @@
                                 <h5>Algorithms</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/fintech.png" alt="FinTech">
@@ -372,7 +372,7 @@
                                 <h5>FinTech</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/future-mobility.png" alt="Future Mobility">
@@ -380,7 +380,7 @@
                                 <h5>Future Mobility</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/ar-vr.png" alt="AR - VR">
@@ -388,7 +388,7 @@
                                 <h5>AR - VR</h5>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-3">
+                        <div class="col-12 col-md-4 col-lg-4">
                             <div class="single-we-offer-content text-center wow fadeInUp" data-wow-delay="0.3s">
                                 <div style="background-image: none;background: none;" class="offer-icon">
                                     <img src="/img/tracks/computer-vision.png" alt="Computer Vision">
