--- a/team/index.html
+++ b/team/index.html
@@ -52,7 +52,7 @@
                                     <li><a href="#cp">Chief Patrons</a></li>
                                     <li><a href="#p">Patrons</a></li>
                                     <li><a href="#facad">Faculty Advisors</a></li>
-                                    <li><a href="#students">Students</a></li>
+                                    <li><a href="#students"> Student Team</a></li>
                                     <li><a href="#">Links</a>
                                         <ul class="dropdown">
                                             <li><a target="_blank" rel="noopener noreferrer" href="//dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
@@ -117,7 +117,7 @@
         </div>
 
         <div id="students" class="container">
-                <h1 class="page-title" style="text-align: center;padding: 10%;">Students</h1>
+                <h1 class="page-title" style="text-align: center;padding: 10%;">Student Team</h1>
                 <div class="row">
                 </div>
             </div>
