--- a/team/index.html
+++ b/team/index.html
@@ -105,7 +105,7 @@
         </div>
 
         <div id="adv" class="container">
-            <h1 class="page-title" style="text-align: center;padding: 10%;">Advisory Commitee</h1>
+            <h1 class="page-title" style="text-align: center;padding: 10%;">Advisory Committee</h1>
             <div class="row">
             </div>
         </div>
