JetBrains logo added

--- a/index.html
+++ b/index.html
@@ -980,6 +980,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="/img/sponsors-img/cloudsploit.png" alt="CloudSploit"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.jetbrains.com/"><img style="width:auto;" src="/img/sponsors-img/jetbrains-variant-4.png" alt="JetBrains"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="/img/sponsors-img/sticker-mule-logo-light.png" alt="StickerMule"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
