Fidelity, Wells Fargo

--- a/index.html
+++ b/index.html
@@ -947,7 +947,13 @@
                 <div class="col-12">
                     <div style="display:flex;justify-content: center;" class="our-sponsor-area d-flex flex-wrap">
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.wellsfargojobs.com/egs"><img src="/img/sponsors-img/wells-fargo.jpg" alt="Wells Fargo"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="/img/sponsors-img/devfolio.png" alt="Devfolio"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.fidelity.com/"><img src="/img/sponsors-img/fidelity.jpeg" alt="Fidelity"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.digitalocean.com/"><img src="/img/sponsors-img/digital-ocean.png" alt="Digital Ocean"></a>
