--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
     <meta name="keywords" content="HackVerse, Hackathon, Nation-Wide, NITK Surathkal, Diamond Jubilee Celebrations, IE NITK, Prizes">
 
-    <meta property="og:title" content="HackVerse - One of South India's Biggest Student Hackathons"/>
+    <meta property="og:title" content="HackVerse - One of India's Biggest Student Run Hackathon"/>
     <meta property="og:description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations" />
     <meta property="og:image" content="https://raw.githubusercontent.com/HackVerse/hackverse.github.io/master/img/LOGO.png"/>
     <meta property="og:type" content="website" />
@@ -19,7 +19,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="ienitk">
     <meta name="twitter:site" content="https://hackverse.nitk.ac.in/">
-    <meta name="twitter:title" content="HackVerse - One of South India's Biggest Student Hackathon">
+    <meta name="twitter:title" content="HackVerse - One of India's Biggest Student Run Hackathon">
     <meta name="twitter:description" content="HackVerse - 24 Hour Nation-Wide Hackathon at NITK, Surathkal as a part of the Diamond Jubilee Celebrations">
     <meta name="twitter:image:src" content="/img/LOGO.png">
 
@@ -105,6 +105,7 @@
                                 <!-- <li class="active"><a href="">Home</a></li> -->
                                 <li><a href="#about">About</a></li>
                                 <li><a href="#tracks">Tracks</a></li>
+                                <li><a href="#schedule">Schedule</a></li>
                                 <li><a href="#sponsors">Sponsors</a></li>
                                 <li><a href="#faq">FAQ</a></li>
                                 <li><a href="#footer">Contact</a></li>
@@ -612,7 +613,7 @@
     <!-- Our Schedule Area Start -->
 
     <!-- Schedule -->
-    <section class="our-schedule-area section-padding-100">
+    <section id="schedule" class="our-schedule-area section-padding-100">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -693,7 +694,7 @@
                                                     <img src="img/bg-img/105.png" alt="">
                                                 </div>
                                                 <div class="single-schedule-info">
-                                                    <h6>Digital Ocean: Topic TBD</h6>
+                                                    <h6>Best Practises for using Containers in Production</h6>
                                                     <p>Saurabh Gupta</p>
                                                 </div>
                                             </div>
