added team in dropdwon

--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
                                         <li><a target="_blank" rel="noopener noreferrer" href="//dj.nitk.ac.in/">NITK  💎 Jubilee</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="//www.nitk.ac.in/">NITK, Surathkal</a></li>
                                         <li><a target="_blank" rel="noopener noreferrer" href="/blog/">HackVerse Blog</a></li>
-                                        <!-- <li><a target="_blank" rel="noopener noreferrer" href="http://ie.nitk.ac.in/">IE NITK</a></li> -->
-                                        <!-- <li><a target="_blank" rel="noopener noreferrer" href="#">Our Team </a></li>                                         -->
-
+                                        <li><a target="_blank" rel="noopener noreferrer" href="/team">Team</a></li>
                                         <!-- <li><a href="schedule.html">- Schedule</a></li>
                                         <li><a href="./faq/">- Tickets</a></li>
                                         <li><a href="blog.html">- Blog</a></li>
