--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
                         <a data-toggle="collapse" href="#faq5" class="collapsed">What is the selection criteria? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq5" class="collapse" data-parent="#faq-list">
                             <p>
-                                We are looking for people who innovate and can build crazy, unique solutions to real-world problems. Tell us why you want to be a part of HackVerse, any accomplishments you are proud of and anything else which could strengthen your application.
+                                We are looking for people who innovate and can build crazy, unique solutions to real-world problems. Tell us why you want to be a part of HackVerse, any accomplishments you are proud of and anything else which could strengthen your application. Also, make sure your Devfolio profile is complete with your resume and relevant links.
                             </p>
                         </div>
                     </li>
