--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </section>
 
             <!-- Prizes section -->
-            <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax" style="">
+            <section class="our-ticket-pricing-table-area bg-img bg-gradient-overlay section-padding-100-0 jarallax">
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-12">
@@ -551,7 +551,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Who’s speaking</h4>
+                        <h4 style="color:navy">Speakers and Judges</h4>
                     </div>
                 </div>
             </div>
@@ -592,17 +592,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Judges</h4>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
