--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
             <div class="row">
                 <div class="col-12">
                     <div style="display:flex;justify-content: center;" class="our-sponsor-area d-flex flex-wrap">
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                        <div id="wells-fargo" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.wellsfargojobs.com/egs"><img src="/img/sponsors-img/wells-fargo.jpg" alt="Wells Fargo"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
@@ -1004,8 +1004,8 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="/img/sponsors-img/codechef.png" alt="Codechef"></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width: auto;" src="/img/sponsors-img/zulip.png" alt="Zulip"></a>
+                        <div id="zulip" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img src="/img/sponsors-img/zulip.png" alt="Zulip"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="/img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt="Creative Tim"></a>
@@ -1013,8 +1013,11 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="/img/sponsors-img/cloudsploit.png" alt="CloudSploit"></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.jetbrains.com/"><img style="width:auto;" src="/img/sponsors-img/jetbrains-variant-4.png" alt="JetBrains"></a>
+                        <div id="jet-brains" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.jetbrains.com/"><img src="/img/sponsors-img/jetbrains-variant-4.png" alt="JetBrains"></a>
+                        </div>
+                        <div id="monster" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.monsterenergy.com/"><img src="/img/sponsors-img/monster.png" alt="Monster"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="/img/sponsors-img/sticker-mule-logo-light.png" alt="StickerMule"></a>
@@ -1049,11 +1052,11 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://rosenfeldmedia.com/"><img src="/img/sponsors-img/rosenfeld.png" alt="Zubi.io"></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img style="width:auto;" src="/img/sponsors-img/dev.png" alt="DEV"></a>
+                        <div id="dev" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img src="/img/sponsors-img/dev.png" alt="DEV"></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img style="width:auto;" src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
+                        <div id="sticker-you" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
                         </div>
                     </div>
                     <div id="desktop">
@@ -1551,7 +1554,6 @@
         var mobile_logo = document.getElementById('logo-mob');
         var desktop_logo = document.getElementById('logo-pc');
 
-        var sponsor_img = document.getElementsByClassName('single-sponsor wow fadeInUp')
 
         if (mobile != null) {
             mobile.style.display = "none";
@@ -1570,12 +1572,31 @@
             }
         }
 
+        function img_width(sponsor_div,width_val){
+            if(sponsor_div != null){
+                sponsor_div.getElementsByTagName('img')[0].style.width = width_val
+            }
+        }
+
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
 
-            if (sponsor_img != null && sponsor_img[0] != null) {
-                var sponsor_img = sponsor_img[0].getElementsByTagName('img')[0]
-                sponsor_img.style.width = "auto";
-            }
+            var wf_sponsor = document.getElementById('wells-fargo')
+            img_width(wf_sponsor,"auto")
+
+            var monster_sponsor = document.getElementById('monster')
+            img_width(monster_sponsor,"auto")
+
+            var dev_sponsor = document.getElementById('dev')
+            img_width(dev_sponsor,"auto")
+
+            var zulip_sponsor = document.getElementById('zulip')
+            img_width(zulip_sponsor,"auto")
+
+            var jet_sponsor = document.getElementById('jet-brains')
+            img_width(jet_sponsor,"auto")
+
+            var sticker_sponsor = document.getElementById('sticker-you')
+            img_width(sticker_sponsor,"auto")
 
             if (mobile != null) {
                 mobile.style.display = "block";
