--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     <!-- Our Speakers and Judges Area Start -->
 
     <!-- Minimized here -->
-    <!-- <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60" style="background-image: url(img/bg-img/3.jpg);">
+    <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60" style="background-image: url(img/bg-img/3.jpg);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -560,13 +560,28 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/4.jpg" alt="">
+                            <img src="img/speakers-img/adobe.jpg" alt="">
                         </div>
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <div class="speaker-info">
+                            <h5>Sharad Srivastava</h5>
+                            <p>Senior Engineering Manager at Adobe Systems</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="speaker-single-thumb">
+                            <img src="img/speakers-img/elastic.png" alt="">
+                        </div>
+                        <div class="social-info">
+                            <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://github.com/aravindputrevu"><i class="zmdi zmdi-github"></i></a>
+                            <a href="https://twitter.com/aravindputrevu"><i class="zmdi zmdi-twitter"></i></a>
+                            <a href="https://www.facebook.com/aravind.putrevu"><i class="zmdi zmdi-facebook"></i></a>
                         </div>
                         <div class="speaker-info">
                             <h5>Aravind Putrevu</h5>
@@ -578,49 +593,11 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/5.jpg" alt="">
+                            <img src="img/speakers-img/SaurabhGupta.jpg" alt="">
                         </div>
                         <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Saurabh Gupta</h5>
-                            <p>Senior Developer Advocate at DigitalOcean</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/4.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
-                        </div>
-                        <div class="speaker-info">
-                            <h5>Aravind Putrevu</h5>
-                            <p>Senior Developer Advocate at Elastic</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
-                        <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/5.jpg" alt="">
-                        </div>
-                        <div class="social-info">
-                            <a href="#"><i class="zmdi zmdi-facebook"></i></a>
-                            <a href="#"><i class="zmdi zmdi-instagram"></i></a>
-                            <a href="#"><i class="zmdi zmdi-twitter"></i></a>
-                            <a href="#"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://twitter.com/devopsfollower"><i class="zmdi zmdi-twitter"></i></a>
                         </div>
                         <div class="speaker-info">
                             <h5>Saurabh Gupta</h5>
@@ -630,7 +607,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- Our Speaker and Judges Area End -->
 
