Changed zubi logo

--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="/img/sponsors-img/codechef.png" alt="Codechef"></a>
                         </div>
                         <div id="zulip" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img src="/img/sponsors-img/zulip.png" alt="Zulip"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img src="/img/sponsors-img/zubi-logo_black.png" alt="Zulip"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="/img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt="Creative Tim"></a>
