--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/adobe.jpg" alt="">
+                            <img style="height: 450px;" src="img/speakers-img/adobe.jpg" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
@@ -575,7 +575,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/elastic.png" alt="">
+                            <img style="height: 450px;" src="img/speakers-img/elastic.png" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
@@ -593,7 +593,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img src="img/speakers-img/SaurabhGupta.jpg" alt="">
+                            <img style="height: 450px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
@@ -1549,8 +1549,8 @@
             }
         }
 
-        function img_width(sponsor_div,width_val){
-            if(sponsor_div != null){
+        function img_width(sponsor_div, width_val) {
+            if (sponsor_div != null) {
                 sponsor_div.getElementsByTagName('img')[0].style.width = width_val
             }
         }
@@ -1558,22 +1558,22 @@
         if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
 
             var wf_sponsor = document.getElementById('wells-fargo')
-            img_width(wf_sponsor,"auto")
+            img_width(wf_sponsor, "auto")
 
             var monster_sponsor = document.getElementById('monster')
-            img_width(monster_sponsor,"auto")
+            img_width(monster_sponsor, "auto")
 
             var dev_sponsor = document.getElementById('dev')
-            img_width(dev_sponsor,"auto")
+            img_width(dev_sponsor, "auto")
 
             var zulip_sponsor = document.getElementById('zulip')
-            img_width(zulip_sponsor,"auto")
+            img_width(zulip_sponsor, "auto")
 
             var jet_sponsor = document.getElementById('jet-brains')
-            img_width(jet_sponsor,"auto")
+            img_width(jet_sponsor, "auto")
 
             var sticker_sponsor = document.getElementById('sticker-you')
-            img_width(sticker_sponsor,"auto")
+            img_width(sticker_sponsor, "auto")
 
             if (mobile != null) {
                 mobile.style.display = "block";
