Zebronics added to sponsors list

--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                                             </div>
                                         </div>
 
-<!--                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+                                        <!--                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
                                                     <img src="img/bg-img/111.png" alt="">
@@ -1034,6 +1034,9 @@
                         </div>
                         <div id="sticker-you" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://zebronics.com/"><img style="height: 100%" src="/img/sponsors-img/zebronics.jpg" alt="Zebronics"></a>
                         </div>
                     </div>
                     <div id="desktop">
