--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zebronics.com/"><img style="height: 100%" src="/img/sponsors-img/zebronics.jpg" alt="Zebronics"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://zebronics.com/"><img src="/img/sponsors-img/zebronics.jpg" alt="Zebronics"></a>
                         </div>
                     </div>
                     <div id="desktop">
