--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Speakers and Judges</h4>
+                        <h4 style="color:navy">Guest, Speakers &amp; Judges</h4>
                     </div>
                 </div>
             </div>
