Changed desgn colour

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                         </div>
                         <div class="speaker-info">
                             <h5>Bharat Raizada</h5>
-                            <p>SVP, Tech Division Exec at Wells Fargo</p>
+                            <p style="color: gold;">SVP, Tech Division Exec at Wells Fargo</p>
                         </div>
                     </div>
                 </div>
@@ -583,7 +583,7 @@
                         </div>
                         <div class="speaker-info">
                             <h5>Sharad Srivastava</h5>
-                            <p>Senior Engineering Manager at Adobe Systems</p>
+                            <p style="color: gold;">Senior Engineering Manager at Adobe Systems</p>
                         </div>
                     </div>
                 </div>
@@ -599,7 +599,7 @@
                         </div>
                         <div class="speaker-info">
                             <h5>Shakti Goap</h5>
-                            <p>Founder at Fold and Devfolio</p>
+                            <p style="color: gold;">Founder at Fold and Devfolio</p>
                         </div>
                     </div>
                 </div>
@@ -617,7 +617,7 @@
                         </div>
                         <div class="speaker-info">
                             <h5>Aravind Putrevu</h5>
-                            <p>Senior Developer Advocate at Elastic</p>
+                            <p style="color: gold;">Senior Developer Advocate at Elastic</p>
                         </div>
                     </div>
                 </div>
@@ -633,7 +633,7 @@
                         </div>
                         <div class="speaker-info">
                             <h5>Saurabh Gupta</h5>
-                            <p>Senior Developer Advocate at DigitalOcean</p>
+                            <p style="color: gold;">Senior Developer Advocate at DigitalOcean</p>
                         </div>
                     </div>
                 </div>
