Added chief guest, speakers update

--- a/index.html
+++ b/index.html
@@ -547,11 +547,12 @@
 
     <!-- Minimized here -->
     <section class="our-speaker-area bg-img bg-gradient-overlay section-padding-100-60" style="background-image: url(img/bg-img/3.jpg);">
+
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Guest, Speakers &amp; Judges</h4>
+                        <h4 style="color:navy">Chief Guest</h4>
                     </div>
                 </div>
             </div>
@@ -569,6 +570,34 @@
                         <div class="speaker-info">
                             <h5>Bharat Raizada</h5>
                             <p style="color: gold;">SVP, Tech Division Exec at Wells Fargo</p>
+                        </div>
+                    </div>
+                </div>
+
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
+                        <h4 style="color:navy">Speakers &amp; Judges</h4>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="speaker-single-thumb">
+                            <img style="height: 320px;" src="img/speakers-img/wells-fargo-speaker.jpg" alt="">
+                        </div>
+                        <div class="social-info">
+                            <a href="https://www.linkedin.com/in/avermaa"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <div class="speaker-info">
+                            <h5>Ashutosh Verma</h5>
+                            <p style="color: gold;">Analytics Manager at Wells Fargo</p>
                         </div>
                     </div>
                 </div>
