Dr. Divakar Kamath added as Chief guest

--- a/index.html
+++ b/index.html
@@ -574,6 +574,21 @@
                     </div>
                 </div>
 
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="speaker-single-thumb">
+                            <img style="height: 320px;" src="img/speakers-img/DK.jpeg" alt="">
+                        </div>
+                        <div class="social-info">
+                            <a href="https://twitter.com/divakarkamathb"><i class="zmdi zmdi-twitter"></i></a>
+                        </div>
+                        <div class="speaker-info">
+                            <h5>Dr. Divakar Kamath</h5>
+                            <p style="color: gold;">Director, Google Cloud India</p>
+                        </div>
+                    </div>
+                </div>
+
         </div>
 
         <div class="container">
