Fixed typo (committee)

--- a/team/index.html
+++ b/team/index.html
@@ -50,7 +50,7 @@
                             <div class="classynav">
                                 <ul class="ml-auto" id="nav">
                                     <li><a href="#p">Patrons</a></li>
-                                    <li><a href="#adv">Advisory Comitee</a></li>
+                                    <li><a href="#adv">Advisory Committee</a></li>
                                     <li><a href="#facad">Faculty Advisors</a></li>
                                     <li><a href="#students"> Student Team</a></li>
                                     <li><a href="#">Links</a>
